# reference-system

./: .gitignore  404.html  Dockerfile  DockerfileHumble  DockerfileHumbleRPI  README.md  benchmark.sh  mkdocs.yml  requirements.txt  sitemap.xml  versions.json
.doxygen/: Doxyfile
Classes/: index.html
Examples/: index.html
Files/: index.html
Modules/: index.html
Namespaces/: index.html
Pages/: index.html
autoware_reference_system/: CHANGELOG.rst  CMakeLists.txt  README.md  autoware_reference_system.dot  package.xml
autoware_reference_system/cmake/: generate_report.cmake  generate_summary_report.cmake  generate_traces.cmake  test_requirements.cmake
autoware_reference_system/include/autoware_reference_system/: autoware_system_builder.hpp  autoware_system_builder_utils.hpp  priorities.hpp
autoware_reference_system/include/autoware_reference_system/system/priority/: default.hpp
autoware_reference_system/include/autoware_reference_system/system/timing/: benchmark.hpp  default.hpp
autoware_reference_system/scripts/: benchmark.py  benchmark_all.sh  benchmark_one.sh  utils.sh
autoware_reference_system/src/: number_cruncher_benchmark.cpp  priorities.cpp
autoware_reference_system/src/ros2/: number_cruncher_benchmark.cpp
autoware_reference_system/src/ros2/common/: config.h.in
autoware_reference_system/src/ros2/data/: streaming_conf.json.in  streaming_policy.json  streaming_policy_ref.json
autoware_reference_system/src/ros2/executor/: autoware_default_cbg.cpp  autoware_default_klepsydrasinglethreaded.cpp  autoware_default_multithreaded.cpp  autoware_default_prioritized.cpp  autoware_default_rclc_executor.cpp  autoware_default_rclc_executor_trigger.cpp  autoware_default_singlethreaded.cpp  autoware_default_singlethreaded_picas_multi_executors.cpp  autoware_default_singlethreaded_picas_single_executor.cpp  autoware_default_staticsinglethreaded.cpp
autoware_reference_system/test/: callback_duration.py  conftest.py  constants.py  dropped_messages.py  errors.py  generate_callback_traces.py  generate_graph.sh  generate_memory_traces.py  generate_report.py  generate_reports.py  generate_std_traces.py  generate_summary_reports.py  generate_traces.py  memory_usage.py  std_latency.py  test_autoware_reference_system.cpp  test_autoware_reference_system.py  test_platform.py  test_requirements.py  utils.py
docs/: .pages  doxybook2_config.json  mkdocs.yaml  mkdocs.yml  requirements.txt  the-autoware-reference-system.md  the-reference-system.md
genetic_algo/: genetic_algorithm.py  requirements.txt
index_classes/: index.html
index_examples/: index.html
index_files/: index.html
index_groups/: index.html
index_namespaces/: index.html
index_pages/: index.html
main/: 404.html  index.html  sitemap.xml
reference-system-autoware/: CMakeLists.txt  package.xml
reference-system-autoware/include/reference-system-autoware/: types.hpp
reference-system-autoware/include/reference-system-autoware/node/: sensor.hpp
reference-system-autoware/msg/: message.idl
reference-system-autoware/src/: reference_system.cpp
reference_interfaces/: CHANGELOG.rst  CMakeLists.txt  fix-generated-idl.sh  package.xml
reference_interfaces/msg/: Message1kb.idl  Message4kb.idl  TransmissionStats.idl
reference_system/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  pyproject.toml  setup.cfg  setup.py
reference_system/cfg/: memory_report_template.md  std_report_template.md
reference_system/include/reference_system/: autoware_system_builder.hpp  config.hpp  msg_types.hpp  node_settings.hpp  number_cruncher.hpp  reference_system.hpp  sample_management.hpp  system_builder.hpp  types.hpp
reference_system/include/reference_system/nodes/: settings.hpp
reference_system/include/reference_system/nodes/rclc/: command.hpp  cyclic.hpp  fusion.hpp  intersection.hpp  sensor.hpp  transform.hpp
reference_system/include/reference_system/nodes/rclc_trigger/: command.hpp  cyclic.hpp  fusion.hpp  intersection.hpp  sensor.hpp  transform.hpp
reference_system/include/reference_system/nodes/rclcpp/: command.hpp  cyclic.hpp  fusion.hpp  intersection.hpp  processing.hpp  reactor.hpp  sensor.hpp  transform.hpp
reference_system/include/reference_system/reference_nodes/: command.hpp  fusion.hpp  processing.hpp  reactor.hpp  sensor.hpp
reference_system/include/reference_system/system/: system_builder.hpp  systems.hpp
reference_system/include/reference_system/system/timing/: benchmark.hpp  default.hpp
reference_system/include/reference_system/system/type/: rclc_system.hpp  rclc_trigger_system.hpp  rclcpp_system.hpp  systems.hpp
reference_system/include/reference_system/system/type/autoware/: rclcpp_system.hpp
reference_system/reference_system_py/: benchmark.py  callback_duration.py  constants.py  dropped_messages.py  memory_usage.py  plot_utils.py  report.py  std_latency.py  trace_utils.py
reference_system/src/ros2/executor/: autoware_default_multithreaded.cpp  autoware_default_singlethreaded.cpp  autoware_default_staticsinglethreaded.cpp
reference_system/test/: gtest_main.cpp  test_fixtures.hpp  test_number_cruncher.cpp  test_reference_system.py  test_reference_system_rclcpp.cpp  test_sample_management.cpp
reference_system_autoware/: CMakeLists.txt  README.md  package.xml  reference_system_autoware.dot  reference_system_autoware.md
reference_system_autoware/include/reference_system_autoware/: config.hpp  number_cruncher.hpp  reference_system.hpp  sample_management.hpp  types.hpp
reference_system_autoware/include/reference_system_autoware/node/: command.hpp  fusion.hpp  processing.hpp  reactor.hpp  sensor.hpp
reference_system_autoware/include/reference_system_autoware/reference_nodes/: command.hpp  fusion.hpp  processing.hpp  reactor.hpp  sensor.hpp
reference_system_autoware/msg/: Message.idl
reference_system_autoware/src/: reference_system.cpp
reference_system_autoware/src/ros2/executor/: autoware_default_multithreaded.cpp  autoware_default_singlethreaded.cpp  autoware_default_staticsinglethreaded.cpp
reference_system_autoware/test/: generate_graph.sh
(+1358 files in other folders)
