<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_reference_system</name>
  <version>0.0.0</version>
  <description>Autoware Reference System for the ROScon workshop</description>
  <maintainer email="evan.flynn@apex.ai">Evan Flynn</maintainer>
  <license>Apache License 2.0</license>

  <author email="christian.eltzschig@apex.ai">Christian Eltzschig</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>reference_system</depend>

  <depend>rclcpp</depend>
  <depend>reference_interfaces</depend>
  <depend>rcl_interfaces</depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ros_testing</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
