<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>reference_system</name>
  <version>0.0.0</version>
  <description>Reference system for the ROScon workshop</description>
  <maintainer email="evan.flynn@apex.ai">Evan Flynn</maintainer>
  <license>Apache License 2.0</license>

  <author email="christian.eltzschig@apex.ai">Christian Eltzschig</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>apex_cmake</buildtool_depend>

  <build_depend>interrupt</build_depend>
  <build_depend>logging</build_depend>
  <build_depend>apex_malloc</build_depend>

  <depend>apexcpp</depend>
  <depend>apex_init</depend>
  <depend>rclcpp</depend>
  <depend>reference_interfaces</depend>
  <depend>executor</depend>
  <depend>threading</depend>
  <depend>cpputils</depend>
  <depend>rcl_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
